[package]
name = "clock-backend"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/beestarbush/clock-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[features]
# Enable when cross-compiling for the device
target-platform = []
